fixed saving chat
