# docs/swagger.json
@@ -780,7 +780,8 @@
                     "items": {
                         "type": "object",
                         "additionalProperties": {
-                            "type": "number"
+                            "type": "number",
+                            "format": "float64"
                         }
                     }
                 },
@@ -807,10 +808,7 @@
         "entity.LoginReq": {
             "type": "object",
             "properties": {
-                "login": {
-                    "type": "string"
-                },
-                "password": {
+                "phone_number": {
                     "type": "string"
                 }
             }
